--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -2,13 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Your Page Title</title>
-    <link rel="icon" type="image/x-icon" th:href="@{https://img.icons8.com/ios/50/hearts--v1.png}"/>
-
+    <link rel="icon" type="image/x-icon" th:src="@{/src/main/resources/static/Images/cat-in-the-bin.png}"/>
 </head>
 <body>
 
 <header>
-<div>aboba</div>
 </header>
 <div th:yield="content"></div>
 
