--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,6 +12,8 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
           crossorigin="anonymous">
 
+    <link rel="icon" type="image/x-icon" th:src="@{/src/main/resources/static/Images/cat-in-the-bin.png}"/>
+
     <title>Home</title>
 </head>
 
