--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Your Page Title</title>
-    <link rel="icon" type="image/x-icon" th:src="@{/src/main/resources/static/Images/cat-in-the-bin.png}"/>
+    <link rel="icon" th:href="@{/images/favicon.ico}"/>
 </head>
 <body>
 
