--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,16 +27,15 @@
     <div class="card">
         <h5 class="card-header">Meal Listing</h5>
         <div class="card-body">
+            <a class="btn btn-primary mb-3" th:href="@{meals/createMealForm}" role="button">Create Meal</a>
             <table class="table">
                 <thead>
                 <tr>
                     <th scope="col">ID</th>
                     <th scope="col">Name</th>
-                    <!-- Other columns here -->
                 </tr>
                 </thead>
                 <tbody>
-                <!-- Thymeleaf table generation here -->
                 <tr th:each="meal : ${meals}">
                     <td th:text="${meal.id}"></td>
                     <td th:text="${meal.name}"></td>
