--- a/server/src/main/resources/templates/users.html
+++ b/server/src/main/resources/templates/users.html
@@ -17,9 +17,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" th:href="@{/}">Project XYZ</a>
-</nav>
+<div th:insert="navbar :: navbar">  </div>
 
 
 <a class="btn btn-primary" role="button" th:href="@{/}">Home</a>
