--- a/server/src/main/resources/templates/home.html
+++ b/server/src/main/resources/templates/home.html
@@ -17,30 +17,19 @@
 
 <body>
 <div th:insert="navbar :: navbar">  </div>
-<div class="container my-3">
-    <div class="card">
-        <h5 class="card-header">Meal Listing</h5>
-        <div class="card-body">
-            <a class="btn btn-primary mb-3" th:href="@{meals/createMealForm}" role="button">Create Meal</a>
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">ID</th>
-                    <th scope="col">Name</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="meal : ${meals}">
-                    <td th:text="${meal.id}"></td>
-                    <td th:text="${meal.name}"></td>
 
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
+<h1>Welcome to Spring Бутери!</h1>
+<p>
+    Ресторан "Spring Бутери" – це місце, де навіть кава вам посміхається з круасанами. Зустрічайте смачну гармонію сезонних страв, які розцвітають як весня квітка під теплим сонцем.
 
+    Наші офіціанти - справжні феї-бариста, які здатні зіграти симфонію ароматів, коли вони наливають вашу каву. Аромат м'який як перше дихання весни, а смак - такий, ніби сама природа вирішила завітати до вашого кубка.
+
+    Меню ресторану "Spring Бутери" поділене на сезони, тож ви завжди будете смакувати тільки свіже та унікальне. З салатів, які казково ростуть прямо перед вами, до основних страв, які так смачно, що ви забудете навіть як правильно вимовити "голод".
+
+    Десерти у нас - це справжнє мистецтво. Торти та пироги, приготовані з любов'ю, розчиняються у роті, неначе краплинки роси на свіжому травичці.
+
+    Отже, якщо ви шукаєте не просто ресторан, а справжню оазу смаку та весняного настрою, ласкаво просимо до "Spring Бутери". Тут весна не лише в назві, але і в кожному шматочку їжі!
+</p>
 
 <script crossorigin="anonymous"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
