create meal changes

--- a/server/src/main/resources/templates/navbar.html
+++ b/server/src/main/resources/templates/navbar.html
@@ -17,11 +17,11 @@
 
             <li><a class="nav-link" th:href="@{/meals}">Meals</a></li>
 
-            <li><a class="nav-link" th:href="@{/cre}">Categories</a></li>
+            <li><a class="nav-link" th:href="@{/}">Categories</a></li>
 
-            <li><a class="nav-link" th:href="@{/cre}">Orders</a></li>
+            <li><a class="nav-link" th:href="@{/}">Orders</a></li>
 
-            <li><a class="nav-link" th:href="@{/cre}">Log Out</a></li>
+            <li><a class="nav-link" th:href="@{/}">Log Out</a></li>
         </ul>
     </div>
 </nav>
