--- a/server/src/main/resources/templates/meals.html
+++ b/server/src/main/resources/templates/meals.html
@@ -2,45 +2,65 @@
 <html th:extends="base" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
 
-  <link crossorigin="anonymous"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-        rel="stylesheet">
+    <link crossorigin="anonymous"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          rel="stylesheet">
 
-  <link rel="icon" th:href="@{/images/favicon.ico}"/>
+    <link rel="icon" th:href="@{/images/favicon.ico}"/>
 
-  <title>Home</title>
+    <title>Home</title>
 </head>
 
 <body>
-<div th:insert="navbar :: navbar">  </div>
+<div th:insert="navbar :: navbar"></div>
 <div class="container my-3">
-  <div class="card">
-    <h5 class="card-header">Meal Listing</h5>
-    <div class="card-body">
-      <a class="btn btn-primary mb-3" th:href="@{meals/createMealForm}" role="button">Create Meal</a>
-      <table class="table">
-        <thead>
-        <tr>
-          <th scope="col">ID</th>
-          <th scope="col">Name</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="meal : ${meals}">
-          <td th:text="${meal.id}"></td>
-          <td th:text="${meal.name}"></td>
-
-        </tr>
-        </tbody>
-      </table>
+    <div class="card">
+        <h5 class="card-header">Meal Listing</h5>
+        <div class="card-body">
+            <a class="btn btn-primary mb-3" th:href="@{meals/createMealForm}" role="button">Create Meal</a>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col"></th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="meal : ${meals}">
+                    <td th:text="${meal.id}"></td>
+                    <td th:text="${meal.name}"></td>
+                    <td th:text="${meal.price}"></td>
+                    <td>
+                        <a class="btn btn-primary mb-3" th:href="@{meals/editMealForm}" role="button">Edit</a>
+                        <form th:action="@{'/meals/' + ${meal.id}}" method="delete" id="deleteForm">
+                            <button class="btn btn-primary mb-3" type="button" onclick="confirmDelete()">Delete</button>
+                        </form>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-  </div>
 </div>
 
+<script th:src="@{https://code.jquery.com/jquery-3.3.1.slim.min.js}"></script>
+<script th:src="@{https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js}"></script>
+<script th:src="@{https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
+
+
+<script th:inline="javascript">
+    function confirmDelete() {
+        if (confirm('Are you sure you want to delete this item?')) {
+            document.getElementById('deleteForm').submit();
+        }
+    }
+</script>
 
 <script crossorigin="anonymous"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
