--- a/server/src/main/resources/templates/meals.html
+++ b/server/src/main/resources/templates/meals.html
@@ -37,10 +37,15 @@
                     <td th:text="${meal.name}"></td>
                     <td th:text="${meal.price}"></td>
                     <td>
-                        <a class="btn btn-primary mb-3" th:href="@{meals/editMealForm}" role="button">Edit</a>
-                        <form th:action="@{'/meals/' + ${meal.id}}" method="delete" id="deleteForm">
-                            <button class="btn btn-primary mb-3" type="button" onclick="confirmDelete()">Delete</button>
-                        </form>
+                        <a class="btn btn-secondary mb-1 p-1" th:href="@{meals/editMealForm}" role="button">Edit</a>
+<!--                        <form action="#" th:action="@{'/meals/deleteMeal/' + ${meal.id}}" class="inline">-->
+<!--                            <button type="delete" class="btn btn-danger mb-1 p-1 inline" onclick="return confirm('Are you sure you want to delete this item?')">-->
+<!--                                Delete-->
+<!--                            </button>-->
+<!--                        </form>-->
+<!--                        <form th:action="@{'/meals/' + ${meal.id}}" method="post" th:id="'deleteForm' + ${meal.id}">-->
+                            <a class="btn btn-danger mb-1 p-1" role="button" onclick="return confirm('Are you sure you want to delete this item?')" th:href="@{'/meals/deleteMeal/' + ${meal.id}}">Delete</a>
+<!--                        </form>-->
                     </td>
                 </tr>
                 </tbody>
@@ -55,9 +60,9 @@
 
 
 <script th:inline="javascript">
-    function confirmDelete() {
-        if (confirm('Are you sure you want to delete this item?')) {
-            document.getElementById('deleteForm').submit();
+    function confirmDelete(e) {
+        if(confirm('Are you sure you want to delete this item?')) {
+            e.preventDefault();
         }
     }
 </script>
