--- a/server/src/main/resources/templates/login.html
+++ b/server/src/main/resources/templates/login.html
@@ -25,6 +25,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Log in</button>
             </form>
+            <p class="mt-3 text-center">Don't have an account? <a th:href="@{/signup/createUserForm}">Create one</a></p>
         </div>
     </div>
 </div>
