--- a/server/src/main/resources/templates/navbar.html
+++ b/server/src/main/resources/templates/navbar.html
@@ -21,7 +21,15 @@
 
             <li><a class="nav-link" th:href="@{/orders}">Orders</a></li>
 
+            <li> <a class="navbar-brand" th:href="@{/orders}">
+                <button type="submit">
+                    <img src="https://cdn-icons-png.flaticon.com/512/3081/3081797.png" width=" 15px" height="15px" alt="buttonpng" border="0" />
+                </button>
+            </a></li>
+
             <li><a class="nav-link" th:href="@{/login}">Log Out</a></li>
+
+
         </ul>
     </div>
 </nav>
